# words

./: .gcloudignore  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  cloudbuild.yaml  go.mod  go.sum  main.go  main_test.go  words.txt
client/: BUILD.bazel  main.go
data/: BUILD.bazel  data.go
makewords/: BUILD.bazel  makewords.go
solver/: BUILD.bazel  solver.go  solver_test.go
static/: BUILD.bazel  code.js  defs.bzl  embed.go  style.css  style.css.map  style.scss
templates/: index.html
