load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/hulkholden/words
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
    ],
    command = "update-repos",
)

oci_tarball(
    name = "words_tarball",
    image = ":image",
    repo_tags = ["words:latest"],
)

oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/words_linux"],
    tars = [":words_layer"],
)

pkg_tar(
    name = "words_layer",
    srcs = [":words_linux"],
    # include_runfiles = True
)

go_binary(
    name = "words_linux",
    embed = [":words_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "words",
    embed = [":words_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "words_lib",
    srcs = ["main.go"],
    embedsrcs = ["templates/index.html"],
    importpath = "github.com/hulkholden/words",
    visibility = ["//visibility:private"],
    deps = [
        "//data",
        "//solver",
        "//static",
    ],
)
