module(name = "words", version = "1.0.0")

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_go", version = "0.39.1")
bazel_dep(name = "rules_oci", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "gazelle", version = "0.31.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "org_golang_x_exp",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    digest = "sha256:bc535c40cfde8f8f1601f6cc9b51d3387db0722a7c4756896c68e3de4f074966",
    image = "gcr.io/distroless/static",
)
use_repo(oci, "distroless_static")