load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
    goarch = "wasm",
    goos = "js",
)

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/hulkholden/words/client",
    visibility = ["//visibility:private"],
)
