load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "client",
    embed = [":client_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/hulkholden/words/client",
    visibility = ["//visibility:private"],
    deps = [
        "//data",
        "//solver",
    ],
)
