load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "makewords",
    embed = [":makewords_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "makewords_lib",
    srcs = ["makewords.go"],
    importpath = "github.com/hulkholden/words/makewords",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_exp//maps",
        "@org_golang_x_exp//slices",
    ],
)
