load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "solver",
    srcs = ["solver.go"],
    importpath = "github.com/hulkholden/words/solver",
    visibility = ["//visibility:public"],
)

go_test(
    name = "solver_test",
    srcs = ["solver_test.go"],
    embed = [":solver"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
